# SermonDB

./: pyproject.toml  requirements.txt
config/: settings.py  urls.py
sermons/: views.py
web/: package-lock.json  package.json
